Updated landing page with links to github.

--- a/pages/pages/landing.html
+++ b/pages/pages/landing.html
@@ -36,7 +36,7 @@ cover; -o-background-size: cover; background-size: cover; } .hero .nav, .hero.is
                     <div id="navbarMenu" class="navbar-menu">
                         <div class="navbar-end">
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="http://sigma-alfa.herokuapp.com">
                                     <span class="icon">
                                         <i class="fa fa-home"></i>
                                     </span>
@@ -52,7 +52,7 @@ cover; -o-background-size: cover; background-size: cover; } .hero .nav, .hero.is
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="https://github.com/pedrogritter/sigma/wiki">
                                     <span class="icon">
                                         <i class="fa fa-book"></i>
                                     </span>
@@ -60,7 +60,7 @@ cover; -o-background-size: cover; background-size: cover; } .hero .nav, .hero.is
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="https://github.com/dansup/bulma-templates/blob/master/templates/landing.html">
+                                <a class="button is-white is-outlined" href="https://github.com/pedrogritter/sigma">
                                     <span class="icon">
                                         <i class="fa fa-github"></i>
                                     </span>
