Updated landing page with a footer

--- a/pages/pages/landing.html
+++ b/pages/pages/landing.html
@@ -98,6 +98,26 @@ cover; -o-background-size: cover; background-size: cover; } .hero .nav, .hero.is
                 </div>
             </div>
 
+            <footer class="footer is-pulled-bottom has-background-dark">
+                 <div class="container">
+                   <div class="content has-text-centered is-centered has-text-white-ter">
+                     <div id="tsp">
+                       <p>
+                         <a href="https://bulma.io">
+                         <img src="https://bulma.io/images/made-with-bulma--dark.png" alt="Made with Bulma" width="128" height="24">
+                         </a>
+                         <small>
+                               <br>
+                               Source code licensed <a href="https://opensource.org/licenses/mit-license.php">MIT</a>.
+                               <br>
+                               Website content licensed <a rel="license" href="https://ciencias.ulisboa.pt/">G11-LTI</a>.
+                             </small>
+                       </p>
+                     </div>
+                   </div>
+                 </div>
+             </footer>
+
     </section>
     <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
