Fix some details on starting development branch.

--- a/pages/pages/base.html
+++ b/pages/pages/base.html
@@ -26,7 +26,7 @@
   <script type="text/javascript">
     var options = {{items_json | safe}};
   </script>
-  <div id="app">
+  <div id="slider">
 
     <!-- Simple TEMPLATE -->
     <!-- <button @click="show = !show">
