--- a/pages/pages/base.html
+++ b/pages/pages/base.html
@@ -34,21 +34,21 @@
 
   <!-- Slider Menu Section -->
   <script type="text/javascript">
-    // var options = items_json | safe;
-    var options = {
-      { "name":"Home",
-        "url":"{% url 'landing' %}",
-      }
-      { "name":"Aluno",
-        "url":"",
-      }
-      { "name":"Professor",
-        "url":"",
-      }
-      { "name":"About",
-        "url":"",
-      }
-    }
+    var options =  {{ items_json|safe }};
+    // var options = {
+    //   {"name":"Home",
+    //     "url":"{% url 'landing' %}",
+    //   }
+    //   {"name":"Aluno",
+    //   "url":"",
+    //   }
+    //   {"name":"Professor",
+    //   "url":"",
+    //   }
+    //   { "name":"About",
+    //     "url":"",
+    //   }
+    // }
   </script>
   <div id="slider">
 
