Django 'AnonymousUser' object has no attribute '_meta' -fixed

--- a/userauth/userauth/signup.html
+++ b/userauth/userauth/signup.html
@@ -9,7 +9,7 @@
         <!-- bulma form classes -->
         <fieldset>
             <legend class="label">Sign up now</legend>
-            {{ form }}
+            {{ form.as_p }}
         </fieldset>
         <br>
         <div>
