--- a/pages/pages/landing_page.html
+++ b/pages/pages/landing_page.html
@@ -1,7 +1,7 @@
 {% extends "pages/base.html" %}
 {% block content %}
 
-<div class="container has-text-centered">
+<div class="container has-text-centered is-hidden-mobile is-hidden-touch">
   <div class="column is-6 is-offset-3">
     <h1 class="title">
                       Sigma
@@ -9,6 +9,30 @@
     <h2 class="subtitle">
                       Simplifying what should be simple
                   </h2>
+  </div>
+</div>
+
+<div class="container has-text-centered is-hidden-desktop">
+
+  <div class="column is-6 is-offset-3">
+    {% if user.is_authenticated %}
+      <a href="{% url 'authentication' slug='logout' %}" class="button is-primary is-outlined is-large">
+          Logout
+      </a>
+    {% else %}
+    <h1 class="has-text-light has-font-weight-bold title">
+      Sigma
+    </h1>
+    <br>
+    <a class="button is-primary is-outlined is-large" href="{% url 'authentication' slug='login' %}">
+      Login
+    </a>
+    <br>
+    <br>
+    <a class="button is-success is-outlined is-large" href="{% url 'authentication' slug='signup' %}">
+      Need an account
+    </a>
+    {% endif %}
   </div>
 </div>
 
