Custom form - fixed Validation Error messages Added requirement: academic email domain

--- a/userauth/userauth/login.html
+++ b/userauth/userauth/login.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         <div class="field">
           <div class="control">
-            <input class="form-control input is-large" id="username" name="username" type="text" placeholder="Your Username" autofocus="">
+            <input class="form-control input is-large" id="email" name="email" type="text" placeholder="Your Email" autofocus="">
           </div>
         </div>
         <div class="field">
