--- a/userauth/userauth/signup.html
+++ b/userauth/userauth/signup.html
@@ -17,7 +17,7 @@
         </div>
       </form>
       <br>
-      <div class="content">
+      <!-- <div class="content">
       {{ form.errors }}
       {% if form.non_field_errors %}
       <ul class='form-errors'>
@@ -27,10 +27,10 @@
         {% endfor %}
       </ul>
       {% endif %}
-    </div>
+    </div> -->
 
       <div class="box">
-        <small> Already have An Account? <a href="#">Sign In</a></small>
+        <small> Already have An Account? <a href="{% url 'authentication' slug='login' %}">Sign In</a></small>
       </div>
     </div>
   </div>
